--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -6,6 +6,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\6M4T4HFU\\j.1365-3040.1998.00364.html}
 }
 
+@article{akinshinaXeromorphicFeaturesLeaves2020,
+  title = {Xeromorphic {{Features}} of the {{Leaves}} of {{Liriodendron Tulipifera L}}. ({{Magnoliaceae}}) in the {{Arid Climate}} of {{Central Asia}}},
+  author = {Akinshina, N. G. and Duschanova, G. M. and Azizov, A. A. and Khalmurzaeva, A. I. and Toderich, K. N.},
+  date = {2020-10-01},
+  journaltitle = {Moscow Univ. Biol.Sci. Bull.},
+  volume = {75},
+  number = {4},
+  pages = {212--217},
+  issn = {1934-791X},
+  doi = {10.3103/S0096392520040021},
+  url = {https://doi.org/10.3103/S0096392520040021},
+  urldate = {2021-09-22},
+  abstract = {High irradiance of a habitat in arid areas is usually associated with high temperature and dry air, which can cause water deficiency in plants. The Tulip tree (Liriodendron tulipifera) is a light-loving mesophytic species. This study showed that L. tulipifera forms shade or sun leaves depending on the light conditions. Some xeromorphic features were found in leaves of the trees in illuminated habitats. These sun leaves are smaller, denser, and thicker, with smaller epidermal cells and a thick cuticle; the spongy parenchyma consists of a larger number of rows of small cells; the cells of the columnar parenchyma are larger than the shade leaves. The sun leaf contains more total chlorophyll (by 20–30\%), and the guard cells of the stomata of the sun leaf contain chloroplasts. The increased concentration of chlorophyll probably maintains the energy balance in the conditions of inhibited photosynthesis under high illumination and temperature. Decreased sizes of the sun leaf and epidermis cells, thickening of the cuticle and cell wall of epidermal cells, sunken stomata, compact mesophyll with small intercellular spaces, and multirow spongy parenchyma protect from overheating and passive loss of water and can be considered as xeromorphic features. Large numerous stomata and vascular bundles contribute to effective cooling of the surface by transpiration at high temperatures under sufficient water supply. Thus, the leaves of L. tulipifera have an ecological plasticity in relation to illumination and temperature, which contributed to the acclimation of the species to the habitat conditions in arid climates.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\JZ6DEJUT\\Akinshina et al. - 2020 - Xeromorphic Features of the Leaves of Liriodendron.pdf}
+}
+
 @article{albertCrypticPhenologyPlants2019,
   title = {Cryptic Phenology in Plants: {{Case}} Studies, Implications, and Recommendations},
   shorttitle = {Cryptic Phenology in Plants},
@@ -56,6 +73,15 @@
   abstract = {Fire is an increasingly important agent of forest degradation in the Amazon, but little attention has been given to the susceptibility of seasonally flooded forests to fire. Satellite images suggest that forests flooded seasonally by nutrient-poor black waters are more susceptible to fire and may suffer greater fire damage than nearby upland forests. Reasons for this difference may include the presence of a root mat, more fine fuel as litter and a drier understory in the flooded forest. We investigated this difference in the field, hypothesizing that differences in the aboveground structure of the pre-burn forest can contribute to the difference in impacts of, and susceptibility to, fires. We employed a portable profiling LiDAR (PPL), first to compare damage between adjacent black water seasonally flooded and upland forests that were burned by the same fire event, and to then assess prefire canopy structure attributes known to affect fire susceptibility. For both assessments, we used PPL-derived metrics of leaf area and vertical and horizontal variation in the structure of vegetation in the canopy. Four years after the fire, the LiDAR metrics showed greater combined effects of high damage and slow recovery in the seasonally flooded forest; reduction of total Leaf Area Index (LAI) after burning was only 10\% for upland forest but was 71\% in the flood forest. Compared to unburned upland, the canopy of unburned flood forest had structural differences that increase susceptibility to fire, including drier microclimate. It had more gaps, a more open understory and a lower upper canopy. Small patches lacking canopy closure (LAI b 1.0) were far more abundant in the unburned flood forest. We conclude that black water seasonally flooded forest suffers greater fire damage than upland forest and canopy structure contributes to its greater susceptibility to the occurrence of fires. This must be considered in assessments of future Amazon fire risks and impacts, including flood forest acting as a potential conduit for spreading fire to upland forest.},
   langid = {english},
   file = {C\:\\Users\\Me\\Zotero\\storage\\BVMMHVEJ\\Almeida et al. - 2016 - Contrasting fire damage and fire susceptibility be.pdf}
+}
+
+@book{amadaRolesLeafTrichomes2020,
+  title = {Roles of Leaf Trichomes in Heat Transfers and Gas-Exchange Characteristics across Environmental Gradients},
+  author = {Amada, Gaku and Kosugi, Yoshiko and Kitayama, Kanehiro and Onoda, Yusuke},
+  date = {2020-12-14},
+  doi = {10.22541/au.160794364.42389606/v1},
+  abstract = {Dense leaf trichomes can directly decrease gas fluxes through increased gas diffusion resistance and indirectly increase gas fluxes through increased leaf temperature due to increased heat diffusion resistance, which may contribute to adaptation to dry and/or low‐temperature conditions. However, it remains unclear whether the leaf‐trichome resistance increases or decreases the gas‐exchange rates through combined direct and indirect effects. We focused on Metrosideros polymorpha , a dominant tree species inhabiting a large range of environmental gradients in the Hawaiian Islands, whose leaves have an enormous variation in trichome thickness on the lower surface. In five elevational sites, we measured leaf morphological and physiological traits including trichome thickness, gas‐exchange characteristics, and leaf temperature. The trichome thickness was largest in the coldest and driest site and thinnest at the wettest site. Leaf temperature was significantly increased with trichome thickness. With biophysical and physiological models, we show that leaf trichomes can increase the daily photosynthesis through increasing leaf temperature only in the cold alpine area. The daily water‐use efficiency can be lower with increasing leaf trichomes at any elevational sites. Therefore, in terms of diffusion resistance, the leaf trichomes of M. polymorpha can contribute to the adaptation to low‐temperature environments but not to dry environments.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\2C59S7EM\\Amada et al. - 2020 - Roles of leaf trichomes in heat transfers and gas-.pdf}
 }
 
 @online{AmazonForestCarbona,
