--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -268,12 +268,13 @@ $\ddagger$ 1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 
 ```
 
 Sun leaves have anatomical, morphological, and physiological traits that reduce heat due to increased reflectance, lower wettability, and/or higher $g_b$, resulting in lower $T_{leaf}$-$T_{air}$ and/or reduced water stress (Table `r table_leaf_traits`). 
-Thus, sun leaves are generally smaller, thicker, with higher leaf mass per area, and are more deeply lobed, with greater cuticle thickness, and higher trichome density [Fig. `r fig_leaf_T`, @leighInfluenceLeafSize2017; @vogelSunLeavesShade1968a; @sackHowStrongIntracanopy2006;@zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a].
+Thus, sun leaves are generally smaller, thicker, with higher leaf mass per area, and are more deeply lobed, with greater cuticle thickness (protects against water loss), and higher trichome density (increases reflectance) [Fig. `r fig_leaf_T`, @leighInfluenceLeafSize2017; @vogelSunLeavesShade1968a; @sackHowStrongIntracanopy2006;@zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a].
 Sun leaves tend to have higher photosynthetic rates per leaf area, made possible by higher nitrogen and chlorophyll concentrations per leaf area and resulting in lower intercellular CO~2~ concentrations. 
-Further, sun leaves tend to have higher stomatal and vein densities would enable their higher transpiration rates, and that would facilitate effective cooling  [@zwienieckiHydraulicLimitationsImposed2004]. 
-Steeper leaf angles reduce radiation loads and thereby decrease $T_{leaf}-T_{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988], and, in addition to higher droplet contact angles, would have reduced wettability. Leaves in high light environments also exhibit greater leaf packing and clumping. 
+Further, sun leaves tend to have higher stomatal and vein densities, which enable higher $g_s$ and thereby facilitate effective cooling  [@zwienieckiHydraulicLimitationsImposed2004]. 
+Steeper leaf angles reduce radiation loads and thereby decrease $T_{leaf}-T_{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988], and also results in higher droplet contact angles and reduced wettability. 
+Leaves in high light environments also exhibit greater leaf packing and clumping. 
 In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA and higher light absorptance efficiency per unit biomass), but their greater thermal capacitance due to larger leaf size and lower transpiration makes them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. 
-In open canopies, where light is comparatively homogeneous, leaf traits may be more shabed by maximum air temperature ($T_{air_{max}}$) and VPD stress than to light [@mediavillaFoliarPlasticityRelated2019a].
+In open canopies, where light is comparatively homogeneous, leaf traits may be more shaped by maximum air temperature ($T_{air_{max}}$) and VPD stress than to light [@mediavillaFoliarPlasticityRelated2019a].
 
 Elemental concentrations such as nitrogen ($N_{area}$) and phosphorus ($P_{area}$) contribute to high rates of leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes in sun leaves [Table `r table_leaf_traits`, @scartazzaInvestigatingEuropeanBeech2016; @niinemetsWithincanopyVariationRate2004a; @weerasingheCanopyPositionAffects2014], and may be optimized throughout the vertical canopy gradient [@buckleyOptimalCarbonPartitioning2021]. 
 Within-canopy leaf nitrogen distribution can be regulated to prevent photoinhibition in shade leaves during sunflecks, and direct light for sun leaves [@kitaoCanopyNitrogenDistribution2018]. 
